--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project",
+  "name": "friendly_house",
   "version": "1.0.0",
   "description": "start gulp",
   "main": "index.js",
@@ -13,6 +13,8 @@
     "browser-sync": "^2.27.7",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-cssimport": "^7.0.0"
+    "gulp-cssimport": "^7.0.0",
+    "gulp-sass": "^5.0.0",
+    "sass": "^1.43.4"
   }
 }
