--- a/package.json
+++ b/package.json
@@ -13,8 +13,17 @@
     "browser-sync": "^2.27.7",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
+    "gulp-avif": "^1.0.1",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-cleancss": "^0.2.2",
+    "gulp-concat": "^2.6.1",
     "gulp-cssimport": "^7.0.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-image": "^6.2.1",
     "gulp-sass": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-terser": "^2.1.0",
+    "gulp-webp": "^4.0.1",
     "sass": "^1.43.4"
   }
 }
