--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.27.7",
+    "critical": "^4.0.1",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-avif": "^1.0.1",
@@ -19,6 +20,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-cssimport": "^7.0.0",
     "gulp-htmlmin": "^5.0.1",
+    "gulp-if": "^3.0.0",
     "gulp-image": "^6.2.1",
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
