--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "browserslist": [
+    "cover 99.5%",
+    "not IE 11"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
     "browser-sync": "^2.27.7",
     "critical": "^4.0.1",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-avif": "^1.0.1",
+    "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-cleancss": "^0.2.2",
     "gulp-concat": "^2.6.1",
